spacing issues

--- a/AquaBlue/src/components/Layout/Header/Header.scss
+++ b/AquaBlue/src/components/Layout/Header/Header.scss
@@ -56,7 +56,7 @@
       align-items: flex-start;
 
       .logo {
-        max-width: 200px;
+        max-width: 250px;
         max-height: calc(var(--header-height-desktop) -1 * var(--header-padding-desktop));
 
         @media (max-width: $lg) {
